Refactored the HyperGraphPath.java and updated the unit test.